[gd_scene load_steps=6 format=2]

[ext_resource path="res://player_controller/smooth_move3D.gd" type="Script" id=1]
[ext_resource path="res://player_controller/system/Signal_in.tscn" type="PackedScene" id=2]
[ext_resource path="res://player_controller/Player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.1

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.1, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.55, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ray_uncrouch:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1.1, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ray_uncrouch:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:body_height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "STAND", "CROUCH" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Signal_in/CollisionShape2:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.55, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("root_ray_stair:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1.1, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.55, 0 )
shape = SubResource( 1 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="eye_position" type="Spatial" parent="rotation_helper"]

[node name="holder" type="Spatial" parent="rotation_helper/eye_position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )

[node name="ray_activate" type="RayCast" parent="rotation_helper/eye_position"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="SmoothMove3D" type="Spatial" parent="rotation_helper/eye_position"]
script = ExtResource( 1 )

[node name="fps_camera" type="Camera" parent="rotation_helper/eye_position/SmoothMove3D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/CROUCH = SubResource( 2 )

[node name="ray_uncrouch" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0 )
cast_to = Vector3( 0, 1.41, 0 )

[node name="ray_climb1" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.6 )

[node name="ray_climb2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.6 )

[node name="ray_climb3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.5 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="Signal_in" parent="." instance=ExtResource( 2 )]
logic_target = NodePath("..")
ladder = true
wind_force = true

[node name="CollisionShape2" type="CollisionShape" parent="Signal_in"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.55, 0 )
shape = SubResource( 1 )

[node name="root_ray_stair" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0 )

[node name="ray_stair1" type="RayCast" parent="root_ray_stair"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
cast_to = Vector3( 0, 0, -0.5 )

[node name="ray_stair3" type="RayCast" parent="root_ray_stair"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )

[node name="ray_stair2" type="RayCast" parent="root_ray_stair"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )
